<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_heading"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
         />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:id="@+id/article_subheading"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_subtitle"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAppearance=
                    "@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_text"
                 />

            <TextView
                android:id="@+id/text_message_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <EditText
                    android:id="@+id/sample_EditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/placeholder"
                    android:layout_margin="6dp"
                    android:autofillHints=""
                    tools:ignore="LabelFor">
                </EditText>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#D6D7D7"
                    android:text="@string/ADD_COMMENT"
                    android:textColor="@color/black"
                    android:onClick="launchSecondActivity"
                    android:layout_margin="6dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>